updated intern types

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div class="resume-content mr-auto">
               <h5 class="mb-0">Data Scientist Intern</h5>
               <div class=""> Melbourne Data Analytics Platform (MDAP)</div>
-              <p> Implemented innovative machine learning approaches, including weak supervision, for the sentiment analysis on large corpus of texts related to sustainable energy</p>
+              <p> Implemented weak supervision for sentiment analysis on a large corpus of texts related to sustainable energy</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Nov 2019 - Feb 2020</span>
