fixing the first page

--- a/index.html
+++ b/index.html
@@ -170,12 +170,6 @@
                   <td> <small> @Deakin Uni</td>
               </tr>
 
-            <tr>
-              <td><small> 18-8-2018</small> </td>
-              <td> Presented a paper at The 3rd Saudi Scientific Conferrence</td>
-              <td> <small> @Uni of Sydeny</td>
-            </tr>
-
           </tbody>
         </table>
       </section>
@@ -205,7 +199,7 @@
               <strong class="d-inline-block mb-2 text-primary">Web App</strong>
               <h3 class="mb-0">KAUx</h3>
               <div class="mb-1 text-muted">Completed</div>
-              <p class="card-text mb-auto"> KAUx was an Arabic MOOC platform </p>
+              <p class="card-text mb-auto"> KAUx is an Arabic MOOC platform </p>
               <a href="#" class="stretched-link">More Info</a>
             </div>
             <div class="col-auto d-none d-lg-block nargin_20 ">
