--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
               <h5 class="mb-0">Missouri State University</h5>
               <div class=""> Master of Arts</div>
                <div> English (TESOL) </div>
-              <p>GPA: 3.974</p>
+              <p>GPA: 3.97/4</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary"> 2010 - 2013</span>
