--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </span>
           <br>
            <li class="nav-item">
-            <a class="nav-link" href=""> CV (PDF) </a>
+            <a class="nav-link" href="img/Resume-9-2021.pdf"  target=”_blank”> > CV (PDF) </a>
           </li>
         </ul>
       </div>
