--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
           </li>
            <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile mx-auto mb-2" src="img/Emad_A_Alghamdi.jpg" alt="Emad A Alghamdi">
+          <img class="img-fluid img-profile mx-auto mb-2" src="img/Emad Alghamdi.jpeg" alt="Emad A Alghamdi">
         </span>
           <br>
            <li class="nav-item">
