--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
           </thead>
           <tbody>
             <tr>
+              <td><small> 24-11-2018</small> </td>
+              <td> Our paper "The use of lexical complexity for assessing diculty in instructional videos.  </small></td>
+              <td> <small> @D<i> Language Learning & Technolog</td>
+          </tr>
               <td><small> 28-7-2021</small> </td>
                   <td>  I completed my PhD in computational linguistics 
                      </small></td>
@@ -166,10 +170,6 @@
                     <td> <small> @ The University of Melbourne </td>
                 </tr>
               <tr>
-              <td><small> 24-11-2018</small> </td>
-                  <td> I will present a paper at the 35th ASCILITE 2018 Conferrence </small></td>
-                  <td> <small> @Deakin Uni</td>
-              </tr>
 
           </tbody>
         </table>
@@ -376,7 +376,7 @@
               <ui>
                 <li class="mb-3">
 
-                  Nawaz, S,  <b> Alghamdi, E.A </b>,  Srivastavac, N.,  Lodge, J., &  Corrin, L. (In press). Understanding the role of AI and learning analytics techniques in addressing task difficulties in STEM education.
+                  Nawaz, S,  <b> Alghamdi, E.A </b>,  Srivastavac, N.,  Lodge, J., &  Corrin, L. (Acccpted). Understanding the role of AI and learning analytics techniques in addressing task difficulties in STEM education.
                 </li>
                 <li class="mb-3">
 
@@ -398,7 +398,7 @@
                   <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In Review). The relative contribution of verbal complexity to second language video lectures diculty assessment. <i> Modern Language Journal. </i>
                 </li>
                 <li class="mb-2">
-                  <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (In Review). The use of lexical complexity for assessing diculty in instructional videos. <i> Language Learning & Technology.</i>
+                  <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (In press). The use of lexical complexity for assessing diculty in instructional videos. <i> Language Learning & Technology.</i>
               </li>
                 <li class="mb-2">
                   <b> Alghamdi, E. A. </b>, Shah, S. R. (2018). Exploring the Effects of Mobile-Based Audience Response System on EFL Students’ Learning and Engagement in a Fully Synchronous Online Course. International Journal of English Linguistics https://doi.org/10.5539/ijel.v8n3p92
