--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
           <tbody>
             <tr>
               <td><small> 24-11-2018</small> </td>
-              <td> Our paper "The use of lexical complexity for assessing diculty in instructional videos.  </small></td>
-              <td> <small> @D<i> Language Learning & Technolog</td>
+              <td> Our paper "The use of lexical complexity for assessing difficulty in instructional videos" was accepted.  </small></td>
+              <td> <small> @ Language Learning & Technolog</td>
           </tr>
               <td><small> 28-7-2021</small> </td>
                   <td>  I completed my PhD in computational linguistics 
