updates ELI map

--- a/index.html
+++ b/index.html
@@ -123,20 +123,20 @@
           <strong>Office</strong>
           <br>
           <small>
-              <span> Fifth Floor </span>
+              <span> Office 474, Third Floor </span>
               </br>
-              <span> Melbounre Connect</span>
+              <span> Bld 534 </span>
               </br>
-              <span> The School of Computing & Information Systems </span>
+              <span> English Language Institute </span>
               <br>
-              <span> University of Melbourne </span>
+              <span>King Abdulaziz University</span>
           </small>
     </div>
   </div>
    <div class="col-3 colly">
        <div class="span">
           <small>
-            <img  id="map" src="img/my_office.jpeg">
+            <img  id="map" src="img/ELI_map.png">
           </small>
     </div>
   </div>
@@ -154,7 +154,12 @@
           </thead>
           <tbody>
             <tr>
-              <td><small> 24-11-2018</small> </td>
+              <td><small> 31-10-2021</small> </td>
+              <td> Our Chapter "Understanding the role of AI and learning analytics techniques in addressing task difficulties in STEM education" was accepted.  </small></td>
+              <td> <small> @Springer's Book</td>
+          </tr>
+            <tr>
+              <td><small> 24-9-2021</small> </td>
               <td> Our paper "The use of lexical complexity for assessing difficulty in instructional videos" was accepted.  </small></td>
               <td> <small> @ Language Learning & Technolog</td>
           </tr>
