commented_ELI_map

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
    <div class="col-3 colly">
        <div class="span">
           <small>
-            <img  id="map" src="img/ELI_map.png">
+            <!-- <img  id="map" src="img/ELI_map.png"> -->
           </small>
     </div>
   </div>
