--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
               <h5 class="mb-3"> Journal Articles</h5>
               <ui>
                 <li class="mb-2">
-                  <b> Alghamdi, E. A. </b> (In review). What makes video difficult? <i> Computers and Education.</i> 
+                  <b> Alghamdi, E. A. </b> (In review). What makes video difficult for language learners? 
                 </li>
                 <li class="mb-2">
                   <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In Review). The relative contribution of verbal complexity to second language video lectures diculty assessment. <i> Modern Language Journal. </i>
@@ -405,6 +405,9 @@
                 <li class="mb-2">
                   <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (In press). The use of lexical complexity for assessing diculty in instructional videos. <i> Language Learning & Technology.</i>
               </li>
+              <li class="mb-2">
+                <b> Alghamdi, E. A., </b>Velloso, E. & Gruba, P. (2021). AUVANA: An automated video analysis tool for visual complexity. Preprint.
+               </li>
                 <li class="mb-2">
                   <b> Alghamdi, E. A. </b>, Shah, S. R. (2018). Exploring the Effects of Mobile-Based Audience Response System on EFL Students’ Learning and Engagement in a Fully Synchronous Online Course. International Journal of English Linguistics https://doi.org/10.5539/ijel.v8n3p92
                 </li>
@@ -412,9 +415,7 @@
                 <li class="mb-2">
                   <b> Alghamdi, E. A. </b> , Rajab, Hussam & Shah, S. R. (2016). Unwatched Online Students Self-created WhatsApp Group in Distance Education: A Collaborative Learning Tool or Cheating Technique. International Research in Education,4(1).133-148.
                 </li>
-                <li class="mb-2">
-               <b> Alghamdi, E. A., </b>Velloso, E. & Gruba, P. (2021). AUVANA: An automated video analysis tool for visual complexity. Behavior Research Methods.
-              </li>
+
                 <li class="mb-2">
                  <b> Alghamdi, E.A. </b>(2016). Untangling multimedia affects via playing an online hidden-object game. <i> International Journal of Computer Assisted Language Learning and Teaching. 6</i>(1), 24-39. DOI: 10.4018/IJCALLT.2016010102.
                 </li>
