--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
 
-                Letter of appreciation by the Saudi Cultural Attaché in Washington, D.C for writing an article about volunteerism</li>
+                Letter of appreciation by the Saudi Cultural Attaché in Washington, D.C</li>
             <li>
 
           </ul>
