--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
       </div>
     </nav>
 
+    <!-- https://emad.ai/ailla_lab/ -->
+
     <div class="container-fluid p-0">
 
       <section class="resume-section p-3 p-lg-5 d-column" id="about">
@@ -80,7 +82,7 @@
             <!--<a href="mailto:name@email.com">name@email.com</a>-->
           <!--</div>-->
           <p class="mb-2">
-            I am an incoming assistant professor of computational linguistics at King Abdulaziz University. I am currently investigating video difficulty and complexity. My research interests lie at the intersection of Applied Linguistics, Human-Computer Interactions (HCI), and Machine Learning. 
+            I am an assistant professor of computational linguistics at King Abdulaziz University. I am the director of the <a href="https://emad.ai/ailla_lab/" target="_blank"> AillA lab </a>. My research interests lie at the intersection of Applied Linguistics, Human-Computer Interactions (HCI), and Machine Learning. 
     
           </p>
         </b>
