--- a/index.html
+++ b/index.html
@@ -137,9 +137,8 @@
   </div>
    <div class="col-3 colly">
        <div class="span">
-          <small>
-            <!-- <img  id="map" src="img/ELI_map.png"> -->
-          </small>
+         <button> <a href="https://emad.ai/ailla_lab/" target="_blank"> AillA lab </a></button>
+     
     </div>
   </div>
 
