--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               <a href="https://github.com/Eaalghamdi/auvana/blob/main/README.md" target=”_blank” class="stretched-link">More Info</a>
             </div>
             <div class="col-auto d-none d-lg-block nargin_20 ">
-              <img  width="140" height="140" src="img/auvana_logo.png">
+              <img  width="240" height="190" src="img/auvana.gif">
             </div>
           </div>
 
@@ -210,7 +210,7 @@
               <a href="#" class="stretched-link">More Info</a>
             </div>
             <div class="col-auto d-none d-lg-block nargin_20 ">
-              <img  width="140" height="140" src="img/Kaux_logo.png">
+              <img width="240" height="190"  src="img/Kaux_logo.png">
             </div>
           </div>
 
@@ -240,7 +240,7 @@
             </div>
             <div class="col-auto d-none d-lg-block nargin_20 ">
   
-              <img  width="140" height="140" src="img/dropzin.png">
+              <img  width="240" height="190"  src="img/dropzin.png">
         
             </div>
           </div>
