--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   </div>
    <div class="col-3 colly">
        <div class="span">
-         <button id="AillA_lab_button"> <a href="https://emad.ai/ailla_lab/" target="_blank"> AillA lab </a></button>
+         <button class="btn btn-lg" id="AillA_lab_button"> <a href="https://emad.ai/ailla_lab/" target="_blank"> AillA lab </a></button>
      
     </div>
   </div>
