update btn style

--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
       </div>
     </nav>
 
-    <!-- https://emad.ai/ailla_lab/ -->
 
     <div class="container-fluid p-0">
 
@@ -137,7 +136,7 @@
   </div>
    <div class="col-3 colly">
        <div class="span">
-         <button class="btn btn-lg" id="AillA_lab_button"> <a href="https://emad.ai/ailla_lab/" target="_blank"> AillA lab </a></button>
+         <button class="btn btn-sm" id="AillA_lab_button"> <a href="https://emad.ai/ailla_lab/" target="_blank"> AillA lab </a></button>
      
     </div>
   </div>
