--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   </div>
    <div class="col-3 colly">
        <div class="span">
-         <button class="btn btn-sm" id="AillA_lab_button"> <a href="https://emad.ai/ailla_lab/" target="_blank"> AillA lab </a></button>
+         <button class="btn btn-sm" id="AillA_lab_button" style="background-color: #DCAA3B"> <a href="https://emad.ai/ailla_lab/" target="_blank"> AillA lab </a></button>
      
     </div>
   </div>
