--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </span>
           <br>
           <li class="nav-item">
-            <a class="nav-link" href="img/Resume-9-2021.pdf"  target=”_blank”> > CV (PDF) </a>
+            <a class="nav-link" href="img/resume_long-20-12-21.pdf"  target=”_blank”> > CV (PDF) </a>
           </li>
         </ul>
       </div>
@@ -136,7 +136,7 @@
   </div>
    <div class="col-3 colly">
        <div class="span">
-         <button class="btn btn-sm" id="AillA_lab_button" style="background-color: #DCAA3B"> <a href="https://emad.ai/ailla_lab/" target="_blank"> AillA lab </a></button>
+         <button class="btn btn-sm" id="AillA_lab_button" style="background-color: #DCAA3B"> <a href="https://emad.ai/ailla_lab/" target="_blank" style="color: black;"> AillA lab </a></button>
      
     </div>
   </div>
