--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
               <p class="card-text mb-auto"> CrowdyQ is a crowedsourcing platform for generating highly quality exam items. </p>
               <!-- <a href="#" class="stretched-link">More Info</a> -->
             </div>
-            <!-- <div class="col-auto d-none d-lg-block nargin_20 ">
+            <div class="col-auto d-none d-lg-block nargin_20 "> -->
   
-              <img  width="140" height="140" src="">
+              <img  width="240" height="190" src="img/CrowdyQ.jpg">
         
-            </div> -->
+            </div> 
           </div>
 
           <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 h-md-250 position-relative">
