--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               <h3 class="mb-0">KAUx</h3>
               <div class="mb-1 text-muted">Completed</div>
               <p class="card-text mb-auto"> KAUx is an Arabic MOOC platform </p>
-              <a href="#" class="stretched-link">More Info</a>
+              <!-- <a href="#" class="stretched-link">More Info</a> -->
             </div>
             <div class="col-auto d-none d-lg-block nargin_20 ">
               <img width="240" height="190"  src="img/Kaux_logo.png">
