--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <!-- <a href="#" class="stretched-link">More Info</a> -->
             </div>
             <div class="col-auto d-none d-lg-block nargin_20 ">
-              <img width="240" height="190"  src="img/Kaux_logo.png">
+              <img width="240" height="190"  src="img/KAUX.png">
             </div>
           </div>
 
@@ -222,10 +222,8 @@
               <p class="card-text mb-auto"> CrowdyQ is a crowedsourcing platform for generating highly quality exam items. </p>
               <!-- <a href="#" class="stretched-link">More Info</a> -->
             </div>
-            <div class="col-auto d-none d-lg-block nargin_20 "> -->
-  
+            <div class="col-auto d-none d-lg-block nargin_20 "> 
               <img  width="240" height="190" src="img/CrowdyQ.jpg">
-        
             </div> 
           </div>
 
