--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             </div>
             <div class="col-auto d-none d-lg-block nargin_20 ">
   
-              <img  width="240" height="190"  src="img/dropzin.png">
+              <img  width="240" height="190"  src="img/dropzin_dashboard.jpg">
         
             </div>
           </div>
