--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <strong>Office</strong>
           <br>
           <small>
-              <span> Office 474, Third Floor </span>
+              <span> Office 271, First Floor </span>
               </br>
               <span> Bld 534 </span>
               </br>
