fixing mobile view

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body id="page-top">
 
-    <nav class="navbar navbar-expand-lg bg-primary fixed-top" id="sideNav">
+    <nav class="navbar navbar-expand-lg bg-primary " id="sideNav">
       <h4 id="name"> Eamd Alghamdi</h4>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -75,11 +75,9 @@
     <div class="container-fluid p-0">
 
       <section class="resume-section p-3 p-lg-5 d-column" id="about">
-
+<div class="row padding-top"> 
         <div class="my-auto col-9">
-          <!--<div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·-->
-            <!--<a href="mailto:name@email.com">name@email.com</a>-->
-          <!--</div>-->
+
           <p class="mb-2">
             I am an assistant professor of computational linguistics at King Abdulaziz University. I am the director of the <a href="https://emad.ai/ailla_lab/" target="_blank"> AILLA Lab </a>. My research interests lie at the intersection of Applied Linguistics, Human-Computer Interactions (HCI), and Machine Learning. 
     
@@ -96,9 +94,10 @@
             Before starting my PhD, I was the founding director of KAUx, a MOOC platform at King Abdulaziz University. 
           </p>
         </div>
+      </div>
 
 <div class="row">
-  <div class="col-3 colly">
+  <div class="col-lg-3 col-sm-12 ">
        <div class="span">
           <strong>Contact Info</strong>
           <br>
@@ -119,7 +118,7 @@
       </div>
   </div>
 
-    <div class="col-3 colly">
+    <div class="col-lg-3 col-sm-612colly">
        <div class="span">
           <strong>Office</strong>
           <br>
@@ -136,14 +135,14 @@
   </div>
    <div class="col-3 colly">
        <div class="span">
-         <button class="btn btn-md" id="AillA_lab_button" style="background-color: #DCAA3B"> <a href="https://emad.ai/ailla_lab/" target="_blank" style="color: black;"> AILLA Lab </a></button>
+         <button class="btn btn-sm" id="AillA_lab_button" style="background-color: #DCAA3B"> <a href="https://emad.ai/ailla_lab/" target="_blank" style="color: black;"> AILLA Lab </a></button>
      
     </div>
   </div>
 
 </div>
 
-        <div class="col-10">
+        <div class="col-10 d-none d-sm-block">
 
 
           <h4 id="subtitle" class="mb-0">News & Talks <a> <small> (Read ALL) </small></a></h4>
