--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <tbody>
                   <tr>
                     <td><small> 31-10-2021</small> </td>
-                    <td> Our Ch "Understanding the role of AI and learning analytics techniques in addressing task difficulties in STEM education" was accepted.  </small></td>
+                    <td> Our Chapter "Understanding the role of AI and learning analytics techniques in addressing task difficulties in STEM education" was accepted.  </small></td>
                 </tr>
                   <tr>
                     <td><small> 24-9-2021</small> </td>
