--- a/index.html
+++ b/index.html
@@ -199,16 +199,16 @@
                 <tbody>
                   <tr>
                     <td><small> 2021</small> </td>
-                    <td> Our propposal for Cambridge Press grant was not accepted </small></td>
+                    <td> Our proposal for Cambridge Press grant was not accepted </small></td>
   
                 </tr>
                   <tr>
                     <td><small> 2021</small> </td>
-                    <td> Our propposal for Pearson grant was not accepted   </small></td>
+                    <td> Our proposal for Pearson grant was not accepted   </small></td>
          
                 </tr>
                     <td><small> 2021</small> </td>
-                        <td>  Our propposal for ETS grant was not accepted 
+                        <td>  Our proposal for ETS grant was not accepted 
                            </small></td>
                
                     </tr>
