--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                   <b> Alghamdi, E. A. </b> (In review). What makes video difficult for language learners? 
                 </li>
                 <li class="mb-2">
-                  <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In Review). The relative contribution of verbal complexity to second language video lectures diculty assessment. <i> Modern Language Journal. </i>
+                  <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In Review). The relative contribution of verbal complexity to second language video lectures diculty assessment. 
                 </li>
                 <li class="mb-2">
                   <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (In press). The use of lexical complexity for assessing diculty in instructional videos. <i> Language Learning & Technology.</i>
@@ -608,7 +608,7 @@
            
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-               <a href="/img/Appreciation_Letter_Emad.pdf" target="_blank" > Letter of appreciation </a> for my work at MDAP 
+               <a href="/img/Appreciation_Letter_Emad.pdf" target="_blank" > Letter of appreciation </a> for my work at Melbourne Data Analytics Platform
 
               </li>
             <li>
