--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
            
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-               <a href="/img/Appreciation_Letter_Emad.pdf" target="_blank" > Letter of appreciation </a> for my work at Melbourne Data Analytics Platform
+               <a href="/img/Appreciation_Letter_Emad.pdf" target="_blank" > Letter of appreciation </a> for my work at Melbourne Data Analytics Platform <a href="https://mdap.unimelb.edu.au/#tab30" target="_blank" > (MDAP) </a>
 
               </li>
             <li>
