--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="my-auto col-9">
 
           <p class="mb-2">
-            I am an assistant professor of computational linguistics at King Abdulaziz University. I am the director of the <a href="https://emad.ai/ailla_lab/" target="_blank"> AILLA Lab </a>. My research interests lie at the intersection of Applied Linguistics, Human-Computer Interactions (HCI), and Machine Learning. 
+            I am an assistant professor of computational linguistics at King Abdulaziz University. I am the director of the <a href="http://www.ailla.tech" target="_blank"> AILLA Lab </a>. My research interests lie at the intersection of Applied Linguistics, Human-Computer Interactions (HCI), and Machine Learning. 
     
           </p>
         </b>
@@ -137,7 +137,9 @@
   </div>
    <div class="col-3 colly">
        <div class="span">
-         <button class="btn btn-sm" id="AillA_lab_button" style="background-color: #DCAA3B"> <a href="https://emad.ai/ailla_lab/" target="_blank" style="color: black;"> AILLA Lab </a></button>
+        <a href="http://www.ailla.tech" target="_blank">
+          <img src="img/Lab_logo.png"..." height="55">
+        </a>
      
     </div>
   </div>
