--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             <div class="resume-content mr-auto">
               <h5 class="mb-0">Missouri State University</h5>
               <div class=""> Master of Arts</div>
-               <div> English (TESOL) </div>
+               <div> English Linguistics </div>
               <p>GPA: 3.97/4</p>
             </div>
             <div class="resume-date text-md-right">
@@ -455,10 +455,10 @@
                   <b> Alghamdi, E. A. </b> (In review). What makes video difficult for language learners? 
                 </li>
                 <li class="mb-2">
-                  <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In Review). The relative contribution of verbal complexity to second language video lectures diculty assessment. 
+                  <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In Review). The relative contribution of verbal complexity to second language video lectures difficulty assessment. 
                 </li>
                 <li class="mb-2">
-                  <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (In press). The use of lexical complexity for assessing diculty in instructional videos. <i> Language Learning & Technology.</i>
+                  <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (In press). The use of lexical complexity for assessing difficulty in instructional videos. <i> Language Learning & Technology.</i>
               </li>
               <li class="mb-2">
                 <b> Alghamdi, E. A., </b>Velloso, E. & Gruba, P. (2021). AUVANA: An automated video analysis tool for visual complexity. Preprint.
