--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             Before starting my PhD, I was the founding director of KAUx, a MOOC platform at King Abdulaziz University. 
           </p>
         </div>
-        <div class="col-3 col-sm-12 colly">
+        <div class="col-lg-3 col-sm-612colly">
           <blockquote class="twitter-tweet"><p lang="en" dir="ltr">I am excited to launch my lab, the AI in Language Learning &amp; Assessment Lab (<a href="https://t.co/azNrVjihZQ">https://t.co/azNrVjihZQ</a>). I collaborate with scientists from Academia (Oxford, Cambridge, Monash, Melbourne) and industry (Adobe &amp; Google) on research related to multimodality, readability, &amp; assessment.</p>&mdash; Emad Alghamdi (@Emad_A_Alghamdi) <a href="https://twitter.com/Emad_A_Alghamdi/status/1482789645637271557?ref_src=twsrc%5Etfw">January 16, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
       
