--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <small>
               <a href="#"> Email </a>
               </br>
-                <a href="https://www.linkedin.com/in/emad-a-alghamdi-7517a7a6/"  target=”_blank”> Linkedin </a>
+                <a href="https://www.linkedin.com/in/emad-a-alghamdi/"  target=”_blank”> Linkedin </a>
               </br>
               <a href="https://www.researchgate.net/profile/Emad-Alghamdi-3"  target=”_blank”> ResearchGate </a>
               </br>
