--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body id="page-top">
 
     <nav class="navbar navbar-expand-lg bg-primary " id="sideNav">
-      <h4 id="name"> Eamd Alghamdi</h4>
+      <h4 id="name"> Emad Alghamdi</h4>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
