--- a/index.html
+++ b/index.html
@@ -80,11 +80,15 @@
 
       <section class="resume-section p-3 p-lg-5 d-column" id="about">
 <div class="row padding-top"> 
+  <div class="my-auto col-9">
+
+  <button class="btn">   
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScsvx_Q4kGwU2IXNJ57NC-mFrd2CGVMya9LRjSRLTNVZQvaRA/viewform?usp=sf_link"  target=”_blank”> TEST  </a></button>
+  </div>
+
         <div class="my-auto col-9">
 
-          <button class="btn">   
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScsvx_Q4kGwU2IXNJ57NC-mFrd2CGVMya9LRjSRLTNVZQvaRA/viewform?usp=sf_link"  target=”_blank”> TEST  </a></button>
-
+     
           <p class="mb-2">
             I am an assistant professor of computational linguistics at King Abdulaziz University. I am the director of the <a href="http://www.ailla.tech" target="_blank"> AILLA Lab </a>. My research interests lie at the intersection of Applied Linguistics, Human-Computer Interactions (HCI), and Machine Learning. 
     
