--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="row padding-top"> 
   <div class="my-auto col-9">
 
-  <button class="btn">   
+  <button class="btn btn-lg btn-danger">   
     <a href="https://docs.google.com/forms/d/e/1FAIpQLScsvx_Q4kGwU2IXNJ57NC-mFrd2CGVMya9LRjSRLTNVZQvaRA/viewform?usp=sf_link"  target=”_blank”> TEST  </a></button>
   </div>
 
@@ -477,7 +477,7 @@
                   <b> Alghamdi, E. A. </b> (In review). What makes video difficult for language learners? 
                 </li>
                 <li class="mb-2">
-                  <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In Review). The relative contribution of verbal complexity to second language video lectures difficulty assessment. 
+                  <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In press). The relative contribution of verbal complexity to second language video lectures difficulty assessment. <i> the Modern Language Journal</i>
                 </li>
                 <li class="mb-2">
                   <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (In press). The use of lexical complexity for assessing difficulty in instructional videos. <i> Language Learning & Technology.</i>
