--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                   <b> Alghamdi, E. A. </b> (In review). What makes video difficult for language learners? 
                 </li>
                 <li class="mb-2">
-                  <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In press). The relative contribution of verbal complexity to second language video lectures difficulty assessment. <i> the Modern Language Journal</i>
+                  <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In press). The relative contribution of verbal complexity to second language video lectures difficulty assessment. <i> The Modern Language Journal</i>
                 </li>
                 <li class="mb-2">
                   <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (In press). The use of lexical complexity for assessing difficulty in instructional videos. <i> Language Learning & Technology.</i>
