--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 <div class="row padding-top"> 
 
   
-  <!-- <div class="my-auto col-9">
+  <div class="my-auto col-9">
 
   <button class="btn btn-lg btn-danger">   
     <a style="color: beige;" href="https://docs.google.com/forms/d/e/1FAIpQLScsvx_Q4kGwU2IXNJ57NC-mFrd2CGVMya9LRjSRLTNVZQvaRA/viewform?usp=sf_link"  target=”_blank”> TEST  </a></button>
-  </div> -->
+  </div>
 
         <div class="my-auto col-9">
 
