--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
                 </thead>
                 <tbody>
                   <tr>
+                    <td><small>4-4-2022</small> </td>
+                   <td>  Two of my research projects for this year were funded by KAU. </td>
+                  </tr>
+                  <tr>
                     <td><small>16-1-2022</small> </td>
                    <td>  I launched my lab, the AI in Language Learning & Assessment Lab (http://ailla.tech). </td>
                   </tr>
