--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </span>
           <br>
           <li class="nav-item">
-            <a class="nav-link" href="img/resume_long-20-12-21.pdf"  target=”_blank”> > CV (PDF) </a>
+            <a class="nav-link" href="img/resume_long.pdf"  target=”_blank”> > CV (PDF) </a>
           </li>
 
         </ul>
