--- a/index.html
+++ b/index.html
@@ -327,6 +327,17 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
+              <h5 class="mb-0">Research Unit Head</h5>
+              <div class="">English Language Institute, King Abdulaziz University</div>
+              <p> Co-supervising 5 Research Interest Groups (+35 Researchers) </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2022 - Present</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
               <h5 class="mb-0">Assistant Professor</h5>
               <div class="">King Abdulaziz University</div>
               <p></p>
@@ -468,7 +479,7 @@
                 </li>
                 <li class="mb-3">
 
-                    <b> Alghamdi, E. A. </b>(2018). Effects of Using Multimodal Glosses in Video Games to Enhance Incidental
+                  <b> Alghamdi, E. A. </b>(2018). Effects of Using Multimodal Glosses in Video Games to Enhance Incidental
                     Vocabulary Learning and Retention. Handbook of Research on Integrating Technology into
                     Contemporary Language Learning and Teaching Chapter: 21
 
@@ -481,6 +492,9 @@
               <ui>
                 <li class="mb-2">
                   <b> Alghamdi, E. A. </b> (In review). What makes video difficult for language learners? 
+                </li>
+                <li class="mb-2">
+                  <b> Alghamdi, E. A. </b> (In review). Book review: Computational psychometrics: new methodologies for a new generation of digital learning and assessment. Language Testing.
                 </li>
                 <li class="mb-2">
                   <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In press). The relative contribution of verbal complexity to second language video lectures difficulty assessment. <i> The Modern Language Journal</i>
