--- a/index.html
+++ b/index.html
@@ -491,6 +491,9 @@
               <h5 class="mb-3"> Journal Articles</h5>
               <ui>
                 <li class="mb-2">
+                  Matthews, J., Masrai, A., Lange, K., McLean, S., <b> Alghamdi, E. A. </b>, Kim, K., Shinhara, Y., Tada, S. (under review). Using meaning recall to explore links between aural lexical knowledge and L2 listening: A replication and extension study. 
+                </li>
+                <li class="mb-2">
                   <b> Alghamdi, E. A. </b> (In review). What makes video difficult for language learners? 
                 </li>
                 <li class="mb-2">
