--- a/index.html
+++ b/index.html
@@ -506,8 +506,11 @@
                   <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (In press). The use of lexical complexity for assessing difficulty in instructional videos. <i> Language Learning & Technology.</i>
               </li>
               <li class="mb-2">
-                <b> Alghamdi, E. A., </b>Velloso, E. & Gruba, P. (2021). AUVANA: An automated video analysis tool for visual complexity. Preprint.
+                <b> Alghamdi, E. A., </b> Velloso, E. & Gruba, P. (2021). AUVANA: An automated video analysis tool for visual complexity. Preprint.
                </li>
+               <li class="mb-2">
+                <b> Alghamdi, E. A., </b> Fahad Otaif, and Paul Gruba. (2018) Designing a video playing interface for second language learners. ASCILITE: Open Oceans: Learning Without Borders (298).
+              </li>
                 <li class="mb-2">
                   <b> Alghamdi, E. A. </b>, Shah, S. R. (2018). Exploring the Effects of Mobile-Based Audience Response System on EFL Students’ Learning and Engagement in a Fully Synchronous Online Course. International Journal of English Linguistics https://doi.org/10.5539/ijel.v8n3p92
                 </li>
