--- a/index.html
+++ b/index.html
@@ -188,14 +188,15 @@
                    <td>  Two of my research projects for this year were funded by KAU. </td>
                   </tr>
                   <tr>
+                    <td><small>20-2-2022</small> </td>
+                    <td> Our paper "The relative contribution of verbal complexity to second language video lectures difficulty assessment" was accepted in MLJ.  </small></td>
+                    
+                </tr>
+                  <tr>
                     <td><small>16-1-2022</small> </td>
                    <td>  I launched my lab, the AI in Language Learning & Assessment Lab (http://ailla.tech). </td>
                   </tr>
-                  <tr>
-                    <td><small> 2022</small> </td>
-                    <td> Our paper " The relative contribution of verbal complexity to second language video lectures difficulty assessment" was accepted in MLJ.  </small></td>
-                    
-                </tr>
+
                   <tr>
                     <td><small>31-10-2021</small> </td>
                     <td> Our Chapter "Understanding the role of AI and learning analytics techniques in addressing task difficulties in STEM education" was accepted.  </small></td>
@@ -233,7 +234,7 @@
                 <tbody>
                   <tr>
                     <td><small> 2022</small> </td>
-                    <td> One of papers was desk-rejected 5 times untile now </small></td>
+                    <td> One of my papers was desk-rejected 5 times untile now </small></td>
                 </tr>
                 <tr>
                   <td><small> 2022</small> </td>
