--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             I was supervised by <a href="https://findanexpert.unimelb.edu.au/profile/486-paul-gruba" target="_blank"> Dr. Paul Gruba </a> and <a href="https://findanexpert.unimelb.edu.au/profile/710004-eduardo-velloso" target="_blank">  Dr. Edaurdo Velloso</a>.
           </p>
            <p class="mb-2"> 
-            I am interested in building innovative tools (websites, plugins, mobile apps, desktop apps, etc.) to help language learners, teachers, researchers, and educators. 
+            I am interested in building innovative tools to help language learners, teachers, researchers, and educators. 
             Before starting my PhD, I was the founding director of KAUx, a MOOC platform at King Abdulaziz University. 
           </p>
         </div>
