--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             <div class="resume-content mr-auto">
               <h5 class="mb-0">Data Scientist Intern</h5>
               <div class=""> Melbourne Data Analytics Platform (MDAP)</div>
-              <p> Implemented weak supervision for sentiment analysis on a large corpus of texts related to sustainable energy</p>
+              <p> I implemented weak supervision for sentiment analysis on a large corpus of texts related to sustainable energy</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Nov 2019 - Feb 2020</span>
@@ -378,7 +378,7 @@
             <div class="resume-content mr-auto">
               <h5 class="mb-0">Founder and CEO</h5>
               <div class="">Dropzin On-Demand Shipping</div>
-              <p> Founded the startup. Administered day-to-day operations. Recruited early employees.</p>
+              <p> I founded the startup, administered day-to-day operations, and recruited early employees.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2016 - 2017</span>
@@ -389,7 +389,7 @@
             <div class="resume-content mr-auto">
               <h5 class="mb-0">Director of e-training Unit</h5>
               <div class="">King Abdulaziz University</div>
-              <p>Founded KAUx, a Massive Open Online Courses (MOOC) platform. § Designed two MOOCs.</p>
+              <p>I founded KAUx, a Massive Open Online Courses (MOOC) platform, and designed two MOOCs.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2014 - 2016</span>
@@ -399,7 +399,7 @@
             <div class="resume-content mr-auto">
               <h5 class="mb-0">Lecturer</h5>
               <div class="">King Abdulaziz University</div>
-              <p>Taught English courses for Uni students</p>
+              <p>I taught English courses for Uni students</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2013 - 2021</span>
