--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                   <b> Alghamdi, E. A. </b> (In review). What makes video difficult for language learners? 
                 </li>
                 <li class="mb-2">
-                  <b> Alghamdi, E. A. </b> (In review). Book review: Computational psychometrics: new methodologies for a new generation of digital learning and assessment. Language Testing.
+                  <b> Alghamdi, E. A. </b> (In review). Book review: Computational psychometrics: new methodologies for a new generation of digital learning and assessment.
                 </li>
                 <li class="mb-2">
                   <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In press). The relative contribution of verbal complexity to second language video lectures difficulty assessment. <i> The Modern Language Journal</i>
