--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             <div class="resume-content mr-auto">
               <h5 class="mb-0">Head of Distance Learning Unit</h5>
               <div class="">King Abdulaziz University</div>
-              <p>Administered two distance online programs.Trained instructors in using several education technologies</p>
+              <p>I administered two distance online programs (8K students) and trained instructors in using several education technologies</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2013 - 2016</span>
