updated modern language journal paper

--- a/index.html
+++ b/index.html
@@ -514,11 +514,11 @@
                   <b> Alghamdi, E. A. </b> (In review). Book review: Computational psychometrics: new methodologies for a new generation of digital learning and assessment.
                 </li>
                 <li class="mb-2">
-                  <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In press). The relative contribution of verbal complexity to second language video lectures difficulty assessment. <i> The Modern Language Journal</i>
-                </li>
-                <li class="mb-2">
                   <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (In press). The use of lexical complexity for assessing difficulty in instructional videos. <i> Language Learning & Technology.</i>
               </li>
+              <li class="mb-2">
+                <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (2022). The relative contribution of verbal complexity to second language video lectures difficulty assessment. <i> The Modern Language Journal</i>
+              <href> https://onlinelibrary.wiley.com/doi/full/10.1111/modl.12773</href></li> 
               <li class="mb-2">
                 <b> Alghamdi, E. A., </b> Velloso, E. & Gruba, P. (2021). AUVANA: An automated video analysis tool for visual complexity. Preprint.
                </li>
