--- a/index.html
+++ b/index.html
@@ -184,13 +184,18 @@
                 </thead>
                 <tbody>
                   <tr>
+                    <td><small>23-5-2022</small> </td>
+                   <td>  Our MLJ paper is now published online <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/modl.12773" target="_blank">https://onlinelibrary.wiley.com/doi/full/10.1111/modl.12773</a> </td>
+                  </tr>
+                  <tr>
+                  <tr>
                     <td><small>4-4-2022</small> </td>
                    <td>  Two of my research projects for this year were funded by KAU. </td>
                   </tr>
                   <tr>
                     <td><small>20-2-2022</small> </td>
                     <td> Our paper "The relative contribution of verbal complexity to second language video lectures difficulty assessment" was accepted in MLJ.  </small></td>
-                    
+      
                 </tr>
                   <tr>
                     <td><small>16-1-2022</small> </td>
@@ -517,8 +522,8 @@
                   <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (In press). The use of lexical complexity for assessing difficulty in instructional videos. <i> Language Learning & Technology.</i>
               </li>
               <li class="mb-2">
-                <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (2022). The relative contribution of verbal complexity to second language video lectures difficulty assessment. <i> The Modern Language Journal</i>
-              <href> https://onlinelibrary.wiley.com/doi/full/10.1111/modl.12773</href></li> 
+                <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (2022). The relative contribution of verbal complexity to second language video lectures difficulty assessment. <i> The Modern Language Journal.</i>
+              <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/modl.12773" target="_blank">https://onlinelibrary.wiley.com/doi/full/10.1111/modl.12773</a></li> 
               <li class="mb-2">
                 <b> Alghamdi, E. A., </b> Velloso, E. & Gruba, P. (2021). AUVANA: An automated video analysis tool for visual complexity. Preprint.
                </li>
