added sabq news artcile

--- a/index.html
+++ b/index.html
@@ -183,6 +183,13 @@
                 <thead>
                 </thead>
                 <tbody>
+                 
+                              <tr>
+                    <td><small>5-8-2022</small> </td>
+                    <td> Sabq published a news <a href=" https://sabq.org/saudia/308b2mu9u8"> article </a> about the University of Melbourne Chancellor's Prize I received </small></td>
+                    </tr>
+      
+
                     <tr>
                     <td><small>5-8-2022</small> </td>
                     <td> I was awarded the University of Melbourne Chancellor's Prize for excellence in the PhD thesis</small></td>
