--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
           <p class="mb-2">
             In my PhD work, I investigated what makes a video difficult for language learners and developed computational models to automatically assess difficulty in videos for use in language assessment, research, and instruction.  
             I also built the Automated Video Analysis <a href="https://github.com/Eaalghamdi/auvana" target="_blank">(AUVANA)</a> , a cross-platform desktop application for extracting, computing, and visualizing complexity in videos. 
-            I was supervised by <a href="https://findanexpert.unimelb.edu.au/profile/486-paul-gruba" target="_blank"> Dr. Paul Gruba </a> and <a href="https://findanexpert.unimelb.edu.au/profile/710004-eduardo-velloso" target="_blank">  Dr. Edaurdo Velloso</a>.
+            I was supervised by <a href="https://findanexpert.unimelb.edu.au/profile/486-paul-gruba" target="_blank"> Dr. Paul Gruba (linguistics)  </a> and <a href="https://findanexpert.unimelb.edu.au/profile/710004-eduardo-velloso" target="_blank">  Dr. Edaurdo Velloso (Computer Science</a>.
           </p>
            <p class="mb-2"> 
-            I am interested in building innovative tools to help language learners, teachers, researchers, and educators. 
+            I am interested in building innovative tools. 
             Before starting my PhD, I was the founding director of KAUx, a MOOC platform at King Abdulaziz University. 
           </p>
         </div>
@@ -256,7 +256,7 @@
                 </tr>
                   <tr>
                     <td><small> 2022</small> </td>
-                    <td> One of my papers was desk-rejected 5 times untile now </small></td>
+                    <td> One of my papers was desk-rejected 5 times until now </small></td>
                 </tr>
                 <tr>
                   <td><small> 2022</small> </td>
@@ -404,7 +404,7 @@
            
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-               <a href="/img/Appreciation_Letter_Emad.pdf" target="_blank"> Letter of appreciation </a> for my work at Melbourne Data Analytics Platform <a href="https://mdap.unimelb.edu.au/#tab30" target="_blank" > (MDAP) </a>
+               <a href="/img/Appreciation_Letter_Emad.pdf" target="_blank"> Letter of appreciation </a> for my work as a data science intern at Melbourne Data Analytics Platform <a href="https://mdap.unimelb.edu.au/#tab30" target="_blank" > (MDAP) </a>
 
               </li>
             <li>
