--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <a class="nav-link js-scroll-trigger" href="#project">Projects</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
@@ -59,9 +62,7 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#dev">Personal Dev</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-          </li>
+
            <span class="d-none d-lg-block">
           <img class="img-fluid img-profile mx-auto mb-2" src="img/Emad Alghamdi.jpeg" alt="Emad A Alghamdi">
         </span>
@@ -100,7 +101,7 @@
           <p class="mb-2">
             In my PhD work, I investigated what makes a video difficult for language learners and developed computational models to automatically assess difficulty in videos for use in language assessment, research, and instruction.  
             I also built the Automated Video Analysis <a href="https://github.com/Eaalghamdi/auvana" target="_blank">(AUVANA)</a> , a cross-platform desktop application for extracting, computing, and visualizing complexity in videos. 
-            I was supervised by <a href="https://findanexpert.unimelb.edu.au/profile/486-paul-gruba" target="_blank"> Dr. Paul Gruba (linguistics)  </a> and <a href="https://findanexpert.unimelb.edu.au/profile/710004-eduardo-velloso" target="_blank">  Dr. Edaurdo Velloso (Computer Science</a>.
+            I was supervised by <a href="https://findanexpert.unimelb.edu.au/profile/486-paul-gruba" target="_blank"> Dr. Paul Gruba </a> (Linguistics) and <a href="https://findanexpert.unimelb.edu.au/profile/710004-eduardo-velloso" target="_blank">  Dr. Edaurdo Velloso</a> (Computer Science).
           </p>
            <p class="mb-2"> 
             I am interested in building innovative tools. 
