--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                </p>
                </b>
                <p class="mb-2">
-                  I hold a PhD in <strong> computational linguistics </strong> from the University of Melbourne and I was supervised by <a href="https://findanexpert.unimelb.edu.au/profile/486-paul-gruba" target="_blank"> Dr. Paul Gruba </a> (Linguistics) and <a href="https://findanexpert.unimelb.edu.au/profile/710004-eduardo-velloso" target="_blank">  Dr. Edaurdo Velloso</a> (Computer Science).
+                  I hold a <strong> PhD </strong> in computational linguistics  from </strong> the University of Melbourne </strong> and I was supervised by <a href="https://findanexpert.unimelb.edu.au/profile/486-paul-gruba" target="_blank"> Dr. Paul Gruba </a> (Linguistics) and <a href="https://findanexpert.unimelb.edu.au/profile/710004-eduardo-velloso" target="_blank">  Dr. Edaurdo Velloso</a> (Computer Science).
                   My PhD was awarded <strong>  the University of Melbourne Chancellor’s Prize for excellence in PhD thesis </strong>. I was a member of the HCI Interactive Technologies Lab <a href=’https://cis.unimelb.edu.au/hci/facilities/ixt-lab’ target="_blank"> (IxT) </a> at the School of Computing and Information System.
                </p>
                <p class="mb-2"> 
