added study link

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                <br>
                <li class="nav-item">
                   <a class="nav-link" href="img/resume_long.pdf"  target=”_blank”> > CV (PDF) </a>
+      
+               </li>
+               <li>
+                  <a class="nav-link" href="https://forms.gle/HySAASBwLhNqWyiL8" target="_blank"> Study </a>
                </li>
             </ul>
          </div>
