--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="#dev">Personal Dev</a>
                </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="https://forms.gle/HySAASBwLhNqWyiL8" target="_blank"> Study </a>
+               </li>
                <span class="d-none d-lg-block">
                <img class="img-fluid img-profile mx-auto mb-2" src="img/Emad Alghamdi.jpeg" alt="Emad A Alghamdi">
                </span>
@@ -59,9 +62,7 @@
                   <a class="nav-link" href="img/resume_long.pdf"  target=”_blank”> > CV (PDF) </a>
       
                </li>
-               <li>
-                  <a class="nav-link" href="https://forms.gle/HySAASBwLhNqWyiL8" target="_blank"> Study </a>
-               </li>
+    
             </ul>
          </div>
       </nav>
