--- a/index.html
+++ b/index.html
@@ -70,7 +70,14 @@
       <section class="resume-section p-3 p-lg-5 d-column" id="about">
          <div class="row">
             <div class="my-auto col-9">
+               <p>
+                  <a href="https://forms.gle/HySAASBwLhNqWyiL8" target="_blank"> Study </a>
+
+
+               </p> 
+               <b>
                <p class="mb-2">
+
                   I am <strong> an assistant professor of computational linguistics </strong>at King Abdulaziz University. I am the <strong> director </strong> of the <a href="http://www.ailla.tech" target="_blank"> AILLA Lab </a>. My research interests lie at the intersection of Applied Linguistics, Human-Computer Interactions (HCI), and Machine Learning. 
                </p>
                </b>
