--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
          <div class="row">
             <div class="my-auto col-9">
                <p>
-                  <a href="https://forms.gle/HySAASBwLhNqWyiL8" target="_blank"> Study </a>
+                  <a href="https://docs.google.com/forms/d/19RehhyxBAR-xxTd8fX1V619xyYZm4Q4QKiSPFTXry20/edit?usp=sharing" target="_blank"> Study </a>
 
 
                </p> 
